chore: fix password eye and text overlap

--- a/public/src/options/options.css
+++ b/public/src/options/options.css
@@ -58,6 +58,29 @@ label {
   color: var(--text-primary);
 }
 
+.password-container {
+  position: relative;
+  width: 100%;
+}
+
+.password-input {
+  width: 100%;
+  padding: 10px;
+  padding-right: 35px !important; /* Space for the eye icon */
+  box-sizing: border-box;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.eye-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
 input[type='text'],
 input[type='password'],
 input[type='number'],
@@ -497,28 +520,6 @@ input[disabled] {
   }
 }
 
-.password-container {
-  position: relative;
-  width: 100%;
-}
-
-.password-input {
-  width: 100%;
-  padding: 10px;
-  padding-right: 35px; /* Space for the eye icon */
-  box-sizing: border-box;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.eye-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
 .card-icons {
   display: flex;
   flex-direction: column;
